--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -50,11 +50,14 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <ImageView
+                    android:id="@+id/select_image"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     android:background="@drawable/camera_border_dotted"
                     android:padding="15dp"
+                    android:clipToOutline="true"
+                    android:scaleType="fitXY"
                     android:src="@drawable/camera_icon"/>
 
                 <View
@@ -87,6 +90,7 @@
                     android:text="Title"/>
 
                 <EditText
+                    android:id="@+id/title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"/>
@@ -102,6 +106,7 @@
                     android:text="Description"/>
 
                 <EditText
+                    android:id="@+id/desc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"/>
@@ -127,6 +132,7 @@
                     android:orientation="horizontal">
 
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/quantity_1"
                         android:layout_width="60dp"
                         android:layout_height="40dp"
                         android:text="1"
@@ -134,7 +140,9 @@
                         android:layout_marginRight="10dp"
                         android:background="@drawable/quantity_button"
                         android:textColor="@color/white" />
+
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/quantity_2"
                         android:layout_width="60dp"
                         android:layout_height="40dp"
                         android:text="2"
@@ -142,7 +150,9 @@
                         android:layout_marginRight="10dp"
                         android:background="@drawable/quantity_button"
                         android:textColor="@color/white" />
+
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/quantity_3"
                         android:layout_width="60dp"
                         android:layout_height="40dp"
                         android:text="3"
@@ -150,7 +160,9 @@
                         android:layout_marginRight="10dp"
                         android:background="@drawable/quantity_button"
                         android:textColor="@color/white" />
+
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/quantity_4"
                         android:layout_width="60dp"
                         android:layout_height="40dp"
                         android:text="4"
@@ -158,7 +170,9 @@
                         android:layout_marginRight="10dp"
                         android:background="@drawable/quantity_button"
                         android:textColor="@color/white" />
+
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/quantity_5"
                         android:layout_width="60dp"
                         android:layout_height="40dp"
                         android:text="5"
@@ -174,10 +188,11 @@
                     android:layout_height="10dp"/>
 
                 <EditText
+                    android:id="@+id/other_quantity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Other Quantity"
-                    android:inputType="text"/>
+                    android:inputType="number"/>
 
                 <View
                     android:layout_width="match_parent"
@@ -190,9 +205,11 @@
                     android:text="Pick up times"/>
 
                 <EditText
+                    android:id="@+id/pickuptime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"/>
+                    android:inputType="text"
+                    android:hint="E.g Today from 1-3pm"/>
 
                 <View
                     android:layout_width="match_parent"
@@ -209,10 +226,12 @@
                     android:layout_height="10dp"/>
 
                 <ImageView
+                    android:id="@+id/select_location"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/map_img"/>
+                    android:background="@drawable/camera_border_dotted"
+                    android:padding="20dp"
+                    android:src="@drawable/location_icon"/>
 
                 <View
                     android:layout_width="match_parent"
@@ -234,6 +253,7 @@
                     android:layout_height="20dp"/>
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/submit_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Submit"
