--- a/app/src/main/res/layout/activity_receive.xml
+++ b/app/src/main/res/layout/activity_receive.xml
@@ -51,6 +51,7 @@
             android:text="Name"/>
 
         <EditText
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"/>
@@ -66,6 +67,7 @@
             android:text="Description"/>
 
         <EditText
+            android:id="@+id/desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"/>
@@ -85,16 +87,19 @@
             android:layout_height="10dp"/>
 
         <ImageView
+            android:id="@+id/select_location"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/map_img"/>
+            android:background="@drawable/camera_border_dotted"
+            android:padding="20dp"
+            android:src="@drawable/location_icon"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="20dp"/>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/submit_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Submit"
