--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@color/white"
     android:fillViewport="true">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -53,8 +54,9 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_centerInParent="true"
+                android:background="@drawable/add_photo"
                 android:paddingRight="10dp"
-                android:background="@drawable/add_photo" />
+                android:scaleType="fitXY" />
         </RelativeLayout>
         <!-- First Name  -->
         <RelativeLayout
