--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -27,261 +27,19 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/card2"
-        android:layout_below="@id/card1"
-        android:layout_width="match_parent"
-        android:background="@drawable/rounded_edit_text"
-        android:layout_margin="20dp"
-        android:layout_height="wrap_content">
-        <!-- Name -->
-        <TextView
-            android:id="@+id/nameLabel2"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:text="Name: "/>
-
-        <TextView
-            android:id="@+id/name2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_toRightOf="@id/nameLabel2"
-            android:paddingLeft="10dp"
-            android:text="Hammad Ahmed"
-            android:textColor="@color/white" />
-        <!-- Type -->
-        <TextView
-            android:id="@+id/typeLabel2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameLabel2"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:text="Type: "
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/type2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/name2"
-            android:layout_marginTop="6dp"
-            android:layout_toRightOf="@id/typeLabel2"
-            android:paddingLeft="10dp"
-            android:text="Donor"
-            android:textColor="@color/white" />
-        <!-- Description -->
-        <TextView
-            android:id="@+id/descriptionLabel2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/typeLabel2"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:text="Description: "
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/description2"
-            android:layout_toRightOf="@id/descriptionLabel2"
-            android:layout_below="@id/type2"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="3 Onions and 2 Potatoes"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/white"
-            android:text="Delete"
-            android:background="#4ED353"
-            app:backgroundTint="@null"
-            android:layout_below="@id/descriptionLabel2">
-        </Button>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/card1"
+    <!-- History List -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/historybar"
-        android:layout_width="match_parent"
-        android:background="@drawable/rounded_edit_text"
-        android:layout_margin="20dp"
-        android:layout_height="wrap_content">
-        <!-- Name -->
-        <TextView
-            android:id="@+id/nameLabel1"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:text="Name: "/>
-        <TextView
-            android:id="@+id/name1"
-            android:layout_toRightOf="@id/nameLabel1"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Hammad Ahmed"/>
-        <!-- Type -->
-        <TextView
-            android:id="@+id/typeLabel1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameLabel1"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:text="Type: "
-            android:textColor="@color/black"
-            android:textStyle="bold" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="40dp"/>
 
-        <TextView
-            android:id="@+id/type1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/name1"
-            android:layout_marginTop="6dp"
-            android:layout_toRightOf="@id/typeLabel1"
-            android:paddingLeft="10dp"
-            android:text="Donor"
-            android:textColor="@color/white" />
-        <!-- Description -->
-        <TextView
-            android:id="@+id/descriptionLabel1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/typeLabel1"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:text="Description: "
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/description1"
-            android:layout_toRightOf="@id/descriptionLabel1"
-            android:layout_below="@id/type1"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="3 Onions and 2 Potatoes"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/white"
-            android:text="Delete"
-            android:background="#4ED353"
-            app:backgroundTint="@null"
-            android:layout_below="@id/descriptionLabel1">
-        </Button>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/card3"
-        android:layout_below="@id/card2"
-        android:layout_width="match_parent"
-        android:background="@drawable/rounded_edit_text"
-        android:layout_margin="20dp"
-        android:layout_height="wrap_content">
-        <!-- Name -->
-        <TextView
-            android:id="@+id/nameLabel3"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:text="Name: "/>
-        <TextView
-            android:id="@+id/name3"
-            android:layout_toRightOf="@id/nameLabel3"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Hammad Ahmed"/>
-        <!-- Type -->
-        <TextView
-            android:id="@+id/typeLabel3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameLabel3"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:text="Type: "
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/type3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/name3"
-            android:layout_marginTop="6dp"
-            android:layout_toRightOf="@id/typeLabel3"
-            android:paddingLeft="10dp"
-            android:text="Donor"
-            android:textColor="@color/white" />
-        <!-- Description -->
-        <TextView
-            android:id="@+id/descriptionLabel3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/typeLabel3"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:text="Description: "
-            android:textColor="@color/black"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/description3"
-            android:layout_toRightOf="@id/descriptionLabel3"
-            android:layout_below="@id/type3"
-            android:layout_marginTop="6dp"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="3 Onions and 2 Potatoes"/>
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/descriptionLabel3"
-            android:layout_centerHorizontal="true"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="#4ED353"
-            android:text="Delete"
-            android:textColor="@color/white"
-            app:backgroundTint="@null"></Button>
-    </RelativeLayout>
 
     <Button
         android:id="@+id/next"
-        android:layout_below="@id/card3"
+        android:layout_below="@id/rv"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="Next"
