--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -9,6 +9,7 @@
     android:padding="14dp"
     >
     <RelativeLayout
+        android:paddingTop="10dp"
         android:layout_marginTop="20dp"
         android:layout_width="120dp"
         android:layout_height="120dp"
