--- a/app/src/main/res/menu/menu_left.xml
+++ b/app/src/main/res/menu/menu_left.xml
@@ -3,9 +3,21 @@
     <group android:id="@+id/menu_top">
         <item android:id="@+id/edit_profile"
             android:title="Edit Profile"
+            android:icon="@drawable/editicon"
             />
-        <item android:id="@+id/change_password"
-            android:title="Change Password"
+        <item android:id="@+id/history"
+            android:title="history"
+            android:icon="@drawable/history_24"
+            />
+        <item android:id="@+id/badges"
+            android:title="badges"
+            android:icon="@drawable/badge_24"
+            />
+        <item
+            android:id="@+id/logout"
+            android:checkable="false"
+            android:title="logout"
+            android:icon="@drawable/exit"
             />
     </group>
 </menu>
