Added donation data to firebase

--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -27,6 +27,7 @@
             android:layout_height="50dp"
             android:padding="10dp"
             android:hint="Search location"
+            android:textColorHint="@color/white"
             android:background="@null"
             android:textAlignment="viewStart"
             android:drawableLeft="@drawable/search_icon_white"
