--- a/app/src/main/res/layout/activity_donate.xml
+++ b/app/src/main/res/layout/activity_donate.xml
@@ -13,31 +13,113 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-            <LinearLayout
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <ImageButton
+                android:id="@+id/back_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
+                android:background="@null"
+                android:src="@drawable/back_icon" />
 
-                <ImageButton
-                    android:id="@+id/back_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:src="@drawable/back_icon" />
+            <View
+                android:layout_width="10dp"
+                android:layout_height="0dp"/>
 
-                <View
-                    android:layout_width="10dp"
-                    android:layout_height="0dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Donate Food"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Donate Food"
-                    android:textColor="@color/black"
-                    android:textSize="20dp" />
+        </LinearLayout>
 
-            </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/select_image"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:background="@drawable/camera_border_dotted"
+                android:padding="15dp"
+                android:clipToOutline="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/camera_icon"/>
+
+            <View
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:text="Add Images"/>
+
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Title"/>
+
+            <EditText
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Description"/>
+
+            <EditText
+                android:id="@+id/desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Quantity"/>
 
             <View
                 android:layout_width="match_parent"
@@ -46,224 +128,148 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="center"
+                android:gravity="center_horizontal"
+                android:weightSum="1"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/select_image"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:background="@drawable/camera_border_dotted"
-                    android:padding="15dp"
-                    android:clipToOutline="true"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/camera_icon"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/quantity_1"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.2"
+                    android:layout_height="40dp"
+                    android:text="1"
+                    android:textAllCaps="false"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/quantity_button"
+                    android:textColor="@color/white" />
 
-                <View
-                    android:layout_width="10dp"
-                    android:layout_height="wrap_content"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/quantity_2"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.2"
+                    android:layout_height="40dp"
+                    android:text="2"
+                    android:textAllCaps="false"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/quantity_button"
+                    android:textColor="@color/white" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:layout_gravity="center"
-                    android:text="Add Images"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/quantity_3"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.2"
+                    android:layout_height="40dp"
+                    android:text="3"
+                    android:textAllCaps="false"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/quantity_button"
+                    android:textColor="@color/white" />
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/quantity_4"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.2"
+                    android:layout_height="40dp"
+                    android:text="4"
+                    android:textAllCaps="false"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/quantity_button"
+                    android:textColor="@color/white" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/quantity_5"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.2"
+                    android:layout_height="40dp"
+                    android:text="5"
+                    android:textAllCaps="false"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/quantity_button"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
             <View
-            android:layout_width="match_parent"
-            android:layout_height="10dp"/>
+                android:layout_width="match_parent"
+                android:layout_height="10dp"/>
 
-            <LinearLayout
+            <EditText
+                android:id="@+id/other_quantity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:hint="Other Quantity"
+                android:inputType="number"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="Title"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"/>
 
-                <EditText
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Pick up times"/>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
+            <EditText
+                android:id="@+id/pickuptime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:hint="E.g Today from 1-3pm"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="Description"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"/>
 
-                <EditText
-                    android:id="@+id/desc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="Your Location"/>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="Quantity"/>
+            <ImageView
+                android:id="@+id/select_location"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@drawable/camera_border_dotted"
+                android:padding="20dp"
+                android:src="@drawable/location_icon"/>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="List For"/>
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/quantity_1"
-                        android:layout_width="60dp"
-                        android:layout_height="40dp"
-                        android:text="1"
-                        android:textAllCaps="false"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/quantity_button"
-                        android:textColor="@color/white" />
+            <Spinner
+                android:id="@+id/list_days"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/quantity_2"
-                        android:layout_width="60dp"
-                        android:layout_height="40dp"
-                        android:text="2"
-                        android:textAllCaps="false"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/quantity_button"
-                        android:textColor="@color/white" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"/>
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/quantity_3"
-                        android:layout_width="60dp"
-                        android:layout_height="40dp"
-                        android:text="3"
-                        android:textAllCaps="false"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/quantity_button"
-                        android:textColor="@color/white" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/quantity_4"
-                        android:layout_width="60dp"
-                        android:layout_height="40dp"
-                        android:text="4"
-                        android:textAllCaps="false"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/quantity_button"
-                        android:textColor="@color/white" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/quantity_5"
-                        android:layout_width="60dp"
-                        android:layout_height="40dp"
-                        android:text="5"
-                        android:textAllCaps="false"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/quantity_button"
-                        android:textColor="@color/white" />
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"/>
-
-                <EditText
-                    android:id="@+id/other_quantity"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Other Quantity"
-                    android:inputType="number"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="Pick up times"/>
-
-                <EditText
-                    android:id="@+id/pickuptime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:hint="E.g Today from 1-3pm"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="Your Location"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="10dp"/>
-
-                <ImageView
-                    android:id="@+id/select_location"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:background="@drawable/camera_border_dotted"
-                    android:padding="20dp"
-                    android:src="@drawable/location_icon"/>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="List For"/>
-
-                <Spinner
-                    android:id="@+id/list_days"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"/>
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/submit_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Submit"
-                    android:textAllCaps="false"
-                    android:background="@drawable/round_corner_button"
-                    android:textSize="18sp"
-                    android:textColor="@color/white" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/submit_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Submit"
+                android:textAllCaps="false"
+                android:background="@drawable/round_corner_button"
+                android:textSize="18sp"
+                android:textColor="@color/white" />
 
 
-            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
