--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,23 +15,30 @@
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <RelativeLayout
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/toolbar"
-            android:padding="20dp"
-            >
+            android:padding="20dp">
+
             <ImageView
                 android:id="@+id/toggler"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="10dp"
-                android:src="@drawable/toogle"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
                 android:contentDescription="something"
-                />
+                android:src="@drawable/toogle" />
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="10dp" />
+
 
         </RelativeLayout>
 
@@ -85,7 +92,7 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@id/text"
                             android:paddingStart="5dp"
-                            android:text="10, 874 neighbours near you!"
+                            android:text="2 neighbours near you!"
                             android:textColor="#434343"
                             android:textSize="13sp" />
 
@@ -94,30 +101,30 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@id/text2"
                             android:paddingStart="5dp"
-                            android:text="They shared 1,227 listening last month!"
+                            android:text="Start the movement of sharing and caring!❤️"
                             android:textColor="#434343"
                             android:textSize="13sp" />
                     </RelativeLayout>
+
                     <ImageView
-                        android:layout_marginEnd="5dp"
-                        android:layout_alignParentEnd="true"
                         android:layout_width="40dp"
                         android:layout_height="80dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="5dp"
                         android:src="@drawable/house"
-
                         />
                 </RelativeLayout>
             </RelativeLayout>
 
 
         </RelativeLayout>
+
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_below="@id/card_home"
-            android:layout_above="@+id/bottom_menu"
             android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            android:layout_above="@+id/bottom_menu"
+            android:layout_below="@id/card_home" />
 
 
         <RelativeLayout
@@ -127,6 +134,7 @@
             android:layout_alignParentBottom="true"
             android:background="@color/orange"
             >
+
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottom_nav"
                 android:layout_width="match_parent"
@@ -137,8 +145,7 @@
                 app:itemIconTint="@drawable/state_selector"
                 app:itemTextColor="@drawable/state_selector"
                 app:labelVisibilityMode="labeled"
-                app:menu="@menu/bottom_menu"
-                />
+                app:menu="@menu/bottom_menu" />
         </RelativeLayout>
     </RelativeLayout>
     <com.google.android.material.navigation.NavigationView
