--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -14,11 +14,6 @@
     <item
         android:id="@+id/goal"
         android:icon="@drawable/goal"
-        android:title="@string/goals"
-        />
-    <item
-        android:id="@+id/setting"
-        android:icon="@drawable/settings"
-        android:title="@string/setting"
+        android:title="Donate"
         />
 </menu>
